--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,7 +14,7 @@ body {
   background: none;
   cursor: pointer;
   &:hover{ 
-    background: #9e9e9e;
+    background:rgba(0, 0, 0, 0.04);
   }
   &--img{
     width: 18px;
@@ -29,6 +29,7 @@ body {
   width: 360px;
   cursor: pointer;
   &:hover{
+    background: rgba(0, 0, 0, 0.04);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15), 0 0px 0 rgba(0, 0, 0, 0.02);
   }
 }
